2007-05-07  Adar Wesley <adarw@mainsoft.com>

	* ConstraintCollection.cs: added CopyTo method with strongly typed Constraint[] 
	parameter.

	* DataTable.cs: added implementation of IXmlSerializable. Added missing
	method ReadXmlSerializable.

2007-04-19  Chris Toshok  <toshok@ximian.com>

	* DataColumnCollection.cs (Add): the Element in our
	CollectionChangedEventArgs should be the column, not the
	collection.  Also, add an event handler for the column's
	PropertyChanged event so we can propagate metadata changes.
	(Remove): Analogous change to the CollectionChangedEventArgs as in
	Add.  Also, unhook the column's PropertyChanged event.
	(OnCollectionmetaDataChanged): emit our new event.
	(ColumnPropertyChanged): called when the column's ColumnName
	property changes.  Emit the proper CollectionChangeEvent.

	* DataView.cs (ColumnCollectionChanged): fix up the comment about
	CollectionChangeAction.Refresh, and make explicit what generates
	it.
	(RegisterEventHandlers): hook up
	DataColumnCollectoin.CollectionMetaDataChanged.
	(RegisterEventHandlers): unhook
	DataColumnCollectoin.CollectionMetaDataChanged.

2007-02-23  Nagappan A  <anagappan@novell.com>

	* DataRow.cs (Item): Checks whether this DataRow exist in the
	DataRowCollection, then compute the expression. Fixes bug #
	80505.

	* DataRowCollection.cs (IndexOf): Modified as internal method for
	1.0 profile.

	* XmlDataReader.cs (StringToObject): DataTables containing
	System.Type throw exception on deserializing. Fixes bug # 80596.

	* XmlDataLoader.cs (StringToObject): DataTables containing
	System.Type throw exception on deserializing. Fixes bug # 80596.

2007-02-20  Konstantin Triger <kostat@mainsoft.com>

	* XmlSchemaDataImporter.cs: ensure the tables are created in document order.

2007-02-19  Konstantin Triger <kostat@mainsoft.com>

	* XmlDataReader.cs, XmlDataInferenceLoader.cs, XmlDiffLoader.cs:
		ignore attributes from "http://www.w3.org/XML/1998/namespace".